# toy-container

./: .gitignore  Cargo.toml  README.md  devcontainer.yml  docker-compose.yml  lima.yml  run.sh  x86_vm.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci-with-docker.yml  ci.yml  security-audit.yml
docker/rust/: Dockerfile
src/: capabilities.rs  child.rs  cli.rs  cmd_create.rs  cmd_start.rs  config.rs  container.rs  errors.rs  hostname.rs  ipc.rs  kernel.rs  main.rs  mounts.rs  named_pipe.rs  namespaces.rs  process.rs  resources.rs  spec.rs  syscalls.rs  utils.rs
