[package]
name = "toycon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
log = "0.4.0"
env_logger = "0.9.0"
nix = "0.25.0"
scan_fmt = "0.2.6"
rand = "0.8.4"
syscallz = "0.16.1"
libc = "0.2.102"
capctl = "0.2.0"
cgroups-rs = "0.2.6"
rlimit = "0.8.3"